# Wallet

./: .gitignore  README.md  login.db  package-lock.json  package.json
backend/: CMakeLists.txt
backend/Docker/: Dockerfile  dashboard.yaml  docker-compose.yaml  run.sh
backend/src/: app.cpp  app.hpp  base64.cpp  base64.hpp  constants.hh  database.cpp  database.hpp  encrypt.cpp  encrypt.hpp  main.cpp  utilitys.hpp
public/: app.js  index.html  login.css  login.html  style.css
server/: banco_dados.cpp  banco_dados.hpp  db.js  login.js  main.cpp  utils.js
src/: server.js  system.js
